solved navbar collapsed error and add links to footer

--- a/src/App.css
+++ b/src/App.css
@@ -385,6 +385,15 @@
   padding: 5px;
 }
 
+@media (max-width: 425px) {
+  .checkbox-row {
+  margin: 30px auto !important;
+  width: 73%;
+}
+
+}
+
+
 /* Raw Material Section */
 
 .raw-materials-container {
@@ -447,6 +456,10 @@ div .footer-section {
   line-height: normal;
 }
 
+.footer-links {
+  text-decoration: none;
+  color: white;
+}
 
 .footer-note-text {
   color: white;
