--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background: #e0b073 !important;
+  background: #e6b678 !important;
 }
 
 code {
